the theorems in DERIV_intros assumes composition with an additional
function and matches a variable to the derivative, which has to be
solved by the simplifier.  Hence (auto intro!: DERIV_intros) computes
the derivative of most elementary terms.

* Maclauren.DERIV_tac and Maclauren.deriv_tac was removed, they are
replaced by: (auto intro!: DERIV_intros).  INCOMPATIBILITY.


*** ML ***

* Tactical FOCUS is similar to SUBPROOF, but allows the body tactic to
introduce new subgoals and schematic variables.  FOCUS_PARAMS is
similar, but focuses on the parameter prefix only, leaving subgoal
premises unchanged.

* Renamed functor TableFun to Table, and GraphFun to Graph.  (Since
functors have their own ML name space there is no point to mark them
separately.)  Minor INCOMPATIBILITY.

* Renamed NamedThmsFun to Named_Thms.  INCOMPATIBILITY.

* Eliminated old Attrib.add_attributes, Method.add_methods and related
cominators for "args".  INCOMPATIBILITY, need to use simplified
Attrib/Method.setup introduced in Isabelle2009.

* Proper context for simpset_of, claset_of, clasimpset_of.  May fall
back on global_simpset_of, global_claset_of, global_clasimpset_of as
last resort.  INCOMPATIBILITY.

* Display.pretty_thm now requires a proper context (cf. former
ProofContext.pretty_thm).  May fall back on Display.pretty_thm_global
or even Display.pretty_thm_without_context as last resort.
INCOMPATIBILITY.


*** System ***

* Support for additional "Isabelle components" via etc/components, see
also the system manual.

* The isabelle makeall tool now operates on all components with
IsaMakefile, not just hardwired "logics".

* Discontinued support for Poly/ML 4.x versions.

* Removed "compress" option from isabelle-process and isabelle usedir;
this is always enabled.

* More fine-grained control of proof parallelism, cf.
Goal.parallel_proofs in ML and usedir option -q LEVEL.



New in Isabelle2009 (April 2009)
--------------------------------

*** General ***
